# Encryption-Tool

./: CMakeLists.txt  README.md  scratch.gitignore
include/: Encryption.h
src/: Encryption.cpp  main.cpp
tests/: EncryptionDecryptionTests.cpp  EncryptionDecryptionTests.h
